[package]
name = "tunl"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--all-features"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
tokio = { version = "1.47.1", features = ["io-util", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
worker = "0.6.1"
futures-util = "0.3.31"
pin-project-lite = "0.2"
uuid = "1.18.1"
bytes = "1.10.1"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0.99"
reqwest = "0.12.23"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
